force-app/main/default/objects/Aditivo_Relacionado__c/Aditivo_Relacionado__c.object-meta.xml
<CustomObject>
    <label>Aditivo Relacionado</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Nome de Aditivo Relacionado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aditivos Relacionados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>