force-app/main/default/objects/Aditivo_Relacionado__c/fields/Aditivo_Contratual_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Aditivo_Contratual_Relacionado__c</fullName>
    <label>Aditivo Contratual Relacionado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Aditivos_Contratuais__c.Contrato_de_Servi_o_Relacionado__r.Id</field>
            <operation>equals</operation>
            <valueField>Aditivos_Contratuais__c.Contrato_de_Servi_o_Relacionado__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Aditivos_Contratuais__c</referenceTo>
    <relationshipLabel>Aditivos Relacionados</relationshipLabel>
    <relationshipName>Aditivos_Relacionados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>