force-app/main/default/objects/Aditivo_Relacionado__c/fields/Ativo_do_Contrato_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Ativo_do_Contrato_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ativo do Contrato Relacionado</label>
    <referenceTo>Ativos_do_Contrato__c</referenceTo>
    <relationshipLabel>Aditivos Relacionados</relationshipLabel>
    <relationshipName>Aditivos_Relacionados</relationshipName>
    <type>Lookup</type>
</CustomField>