force-app/main/default/objects/Aditivo_Relacionado__c/fields/Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Equipamento__c</fullName>
    <formula>Ativo_do_Contrato_Relacionado__r.Ativo_Locado__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipamento</label>
    <type>Text</type>
</CustomField>