force-app/main/default/objects/Aditivo_Relacionado__c/fields/N_de_s_rie__c.field-meta.xml
<CustomField>
    <fullName>N_de_s_rie__c</fullName>
    <formula>Ativo_do_Contrato_Relacionado__r.N_de_S_rie__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° de série</label>
    <type>Text</type>
</CustomField>