force-app/main/default/objects/Aditivo_Relacionado__c/fields/Tipo_de_aditivo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_aditivo__c</fullName>
    <label>Tipo de aditivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADIÇÂO</fullName>
            </value>
            <value>
                <fullName>SUPRESSÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>