force-app/main/default/objects/Aditivo_Relacionado__c/fields/Valor_Total__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total__c</fullName>
    <formula>Valor_Unit_rio_Mensal__c *  Quantidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>